@@ -3,6 +3,9 @@
 # Program to suggest configurations and configuration changes.
 #
 # $Log$
+# Revision 1.4  2004/01/29 19:25:52  jimmyo
+# Fixed bad debug output (forgotten linebreaks) in munin-node-configure (SF#882385).
+#
 # Revision 1.3  2004/01/29 17:36:19  jimmyo
 # Updated copyright information
 #
@@ -437,9 +440,15 @@ sub get_plugins
 		}
 		close (FILE);
 
-		next unless (grep (/^$ps->{$plug}->{'family'}$/, @families));
-		next if ($ps->{$plug}->{'family'} eq "auto" and defined $newer and 
-			!defined $ps->{$plug}->{'version'});
+		unless (grep (/^$ps->{$plug}->{'family'}$/, @families)) {
+			print "\n" if $debug;
+			next;
+		}
+		if ($ps->{$plug}->{'family'} eq "auto" and defined $newer and
+			!defined $ps->{$plug}->{'version'}) {
+			print "\n" if $debug;
+			next;
+		}
 
 		if ($ps->{$plug}->{'capability'}->{'autoconf'})
 		{
