@@ -22,6 +22,8 @@ munin (1.0.0pre2)
   * Make vmstat plugin more portable (SF#882352).
   * Moved generic netstat to linux-dir, as it is too spesific. Added Solaris
     version of the plugin as well. (SF#882354)
+  * Fixed bad debug output (forgotten linebreaks) in munin-node-configure
+    (SF#882385).
 
 munin (1.0.0pre1)
 
